--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "YOUR NAME" 
+title: "Brendan Style's Blog" 
 about:
   template: trestles  # jolla  trestles  solana  marquee  broadside
   image: img/profile.png
