added section for projects

--- a/index.qmd
+++ b/index.qmd
@@ -36,6 +36,6 @@ B.S. in Data Analytics | Aug 2021 - May 2025 <br>
 
 ## Experience
 
-Starbucks Analytics | Data Analyst Intern | May 2024 - Aug 2024
+SUNY Geneseo | Data Analytics Tutor | August 2024 - Current
 
 
