--- a/projects.qmd
+++ b/projects.qmd
@@ -1,7 +1,7 @@
 ---
-title: "GREAT Day Projects"
+title: "Projects"
 listing:
-  contents: great_day
+  contents: projects
   type: default
   sort:
     - "date desc"
