--- a/projects.qmd
+++ b/projects.qmd
@@ -9,7 +9,7 @@ listing:
   categories: true
   sort-ui: true
   filter-ui: true
-  fields: [image, date, title, author, reading-time]
+  fields: [image, date, title, author]
 
 page-layout: full
 ---
