--- a/projects/proj_1/index.qmd
+++ b/projects/proj_1/index.qmd
@@ -19,7 +19,7 @@ When beginning this project, I had 3 questions I wanted to answer:
 
 ### Acquisition
 
-Creation of the dataset was quite simple. Thanks to the draft library from *nfl-data-py*, I was able to load all NFL draft selections from 1980 onward into a dataframe, which I have provided a snapshot of below.
+Creation of the dataset was quite simple. Thanks to the draft library from *nfl-data-py*, I was able to load all NFL draft selections beginning in 1980 into a dataframe, which I have provided a snapshot of below.
 ```{r,echo =FALSE,message= FALSE, warning=FALSE}
 library(dplyr)
 library(readxl)
@@ -27,7 +27,7 @@ data <- read_excel("C:/Users/brend/Desktop/DANL-320/brendan-style.github.io/ds_t
 data <- select(data, 'season','round','pick','pfr_player_name','position', 'w_av')
 knitr::kable(head(data, 20), row.names = FALSE)
 ```
-All told this dataset comes in at well over 10,000 observations, and porvides much more data about the players than what is shown above. Things like career stats/accolades, college attended, etc.
+All told this dataset comes in at well over 10,000 observations, and provides much more data about the players than what is shown above. Things like career stats/accolades, college attended, etc.
 
 ### Cleaning
 
