--- a/model.qmd
+++ b/model.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Home Run Betting Model"
-date: 2025-07-13
+date: 2025-07-14
 Author: Brendan Style
 ---
 
@@ -33,13 +33,19 @@ Here are the picks for today, we will be tracking the profit of these picks as
 the remainder of the season goes along. Enjoy!
 
 
-```{r,echo =FALSE,message= FALSE, warning=FALSE}
-library(dplyr)
-library(readxl)
-data <- read.csv("C:/Users/brend/Desktop/DANL-320/brendan-style.github.io/daily_lineups.csv")
-data <- data[data$pick > 0, ]
-data$book <- ifelse(data$FanDuel > data$DraftKings, "FanDuel", "DraftKings")
-data <- select(data, 'player','pitcher','away_team','home_team','pred_odds','diff','book')
-data <- data %>% arrange(desc(diff))
-knitr::kable(head(data, 50), row.names = FALSE)
-```
+Today is the Home Run Derby, and while my model certainly isn't equipped to handle that kind of
+Environment, it expects it to be very close! The difference between the winner and
+last place is just over 4 percentage points. While I can't post odds, My model
+had Jazz Chisholm around +650 to win, whereas other sportsbooks are listing him
+around +1000 and higher. My advice is to bet on Jazz!
+
+# ```{r,echo =FALSE,message= FALSE, warning=FALSE}
+# library(dplyr)
+# library(readxl)
+# data <- read.csv("C:/Users/brend/Desktop/DANL-320/brendan-style.github.io/daily_lineups.csv")
+# data <- data[data$pick > 0, ]
+# data$book <- ifelse(data$FanDuel > data$DraftKings, "FanDuel", "DraftKings")
+# data <- select(data, 'player','pitcher','away_team','home_team','pred_odds','diff','book')
+# data <- data %>% arrange(desc(diff))
+# knitr::kable(head(data, 50), row.names = FALSE)
+# ```
